[package]
name = "cpc-breadcrumbs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared breadcrumb tracking library for CPC servers (multi-step operation state + fingerprint dedup)"
repository = "https://github.com/josephwander-arch/cpc-breadcrumbs"
readme = "README.md"
keywords = ["cpc", "mcp", "breadcrumb", "tracking"]
categories = ["data-structures"]
rust-version = "1.75"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fs2 = "0.4"
hostname = "0.4"
cpc-paths = { git = "https://github.com/josephwander-arch/cpc-paths", tag = "v0.1.0" }

[dev-dependencies]
tempfile = "3"
